--- a/css/index.css
+++ b/css/index.css
@@ -24,11 +24,15 @@ html,body{
 }
 
 :root{
-	--green: rgb(0, 192, 129);
+	/*--green: rgb(0, 192, 129);*/
+	--green: rgb(49 109 90);
 	--white: #ffffff;
 	--blue: rgb(61, 145, 219);
-	--red: rgb(237, 24, 70);
-	--cyan:  #eeffcc;
+	/*--red: rgb(237, 24, 70);*/
+	--red:  rgb(119 91 97);
+	--cyan:  #9fa5;
+	-lred: rgb(234, 35, 43);
+
 	--black: black;
 	--gray:  lightgray;
 	--index: calc(1vh + 1vw);
@@ -44,6 +48,7 @@ h3{
 	color: var(--white);
 	font-weight: lighter;
 }
+
 
 
 
