--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,7 @@ html,body{
 	--blue: rgb(61, 145, 219);
 	/*--red: rgb(237, 24, 70);*/
 	--red:  rgb(220, 91, 97);
-	--cyan:  #9fa5;
+	--cyan:  lightgreen;
 	-lred: rgb(234, 35, 43);
 
 	--black: black;
