--- a/css/index.css
+++ b/css/index.css
@@ -29,8 +29,8 @@ html,body{
 	--white: #ffffff;
 	--blue: rgb(61, 145, 219);
 	/*--red: rgb(237, 24, 70);*/
-	--red:  rgb(122 91 92);
-	--cyan:  rgb(89 133 157);
+	--red:  rgb(122, 91, 92);
+	--cyan:  rgb(89 ,133, 157);
 	-lred: rgb(234, 35, 43);
 
 	--black: black;
