--- a/css/media.css
+++ b/css/media.css
@@ -35,4 +35,18 @@
 		height: 100%;
 		flex-flow: column nowrap;
 	}
+	form .div {
+		width: 100%;
+		align-items: center;
+		flex-flow:column;
+	}
+	form input{
+		width: 70%;
+	}
+	.about__form form {
+		display: none;
+	}
+	.about__toDo {
+		width: 90%;
+	}
 }
