--- a/css/media.css
+++ b/css/media.css
@@ -35,6 +35,9 @@
 		height: 100%;
 		flex-flow: column nowrap;
 	}
+	nav form {
+		width: 80%;
+	}
 	form .div {
 		width: 100%;
 		align-items: center;
