--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,3 @@
-
-
 @media(max-width: 768px){
 	.portfolio{
 		width: 100vw;
@@ -35,6 +33,12 @@
 		height: 100%;
 		flex-flow: column nowrap;
 	}
+	.nav__formBlock_text {
+		display: flex;
+		justify-content:flex-start;
+		flex-flow:column nowrap;
+		align-items: center;
+	}
 	nav form {
 		width: 80%;
 	}
@@ -42,6 +46,9 @@
 		width: 100%;
 		align-items: center;
 		flex-flow:column;
+	}
+	footer {
+		height: calc(var(--index) * 3);
 	}
 	form input{
 		width: 70%;
@@ -51,6 +58,11 @@
 	}
 	.about__toDo {
 		width: 90%;
+		display: flex;
+		justify-content: flex-start;
+		align-items:center;
+		flex-flow:column nowrap;
+
 	}
 	
 }
