--- a/css/nav.css
+++ b/css/nav.css
@@ -289,9 +289,10 @@ nav {
 	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap;
+	overflow: scroll;
 }
 .portfolio__item {
-	width: 40%;
+	width: max(40%, 300px);
 	height: auto;
 	margin: 0 auto;
 	margin-bottom: 100px;
